<resources>
    <string name="app_name">FunJob Application</string>
    <string name="app_error">不好意思出错了</string>
    <string name="note_write_hint">写点笔记吧</string>
    <string name="note_preview_title">预览</string>
    <string name="app_back">返回</string>
    <string name="app_finish">完成</string>
    <string name="app_preview">预览</string>
    <string name="select_pictures">选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="note_tips">（支持长按拖动排序、左右侧滑可删除）</string>
    <string name="learn_picture_contentDescription">模块封面 </string>
    <string name="login_logo_description">App logo</string>
    <string name="login_logo_app_name">FunJob</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_account_description">清除</string>
    <string name="login_login_btn">登  录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">快速注册</string>
    <string name="login_message">阅读并同意</string>
    <string name="login_service">服务条款</string>
    <string name="register_register">一 键 注 册</string>
    <string name="classify_vue">Vue</string>
    <string name="classify_webpack">Webpack</string>
    <string name="classify_babel">Babel</string>
    <string name="classify_HTML">HTML</string>
    <string name="classify_CSS">CSS</string>
    <string name="classify_browser">浏览器</string>
    <string name="classify_performance">性能</string>
    <string name="classify_network">网络</string>
    <string name="classify_node">Node</string>
    <string name="classify_engineering">工程化</string>
    <string name="classify_react">React</string>
</resources>
